RESOLVED FIXED132078
[New Multicolumn] fast/multicol/fixed-column-percent-logical-height-orthogonal-writing-mode.html fails
https://bugs.webkit.org/show_bug.cgi?id=132078
Summary [New Multicolumn] fast/multicol/fixed-column-percent-logical-height-orthogona...
Dave Hyatt
Reported 2014-04-23 14:47:14 PDT
fast/multicol/fixed-column-percent-logical-height-orthogonal-writing-mode.html fails. This was a bug fix for 103075, and it seems like it has regressed with the new columns.
Attachments
Patch (4.27 KB, patch)
2014-04-23 15:14 PDT, Dave Hyatt
andersca: review+
Dave Hyatt
Comment 1 2014-04-23 15:14:06 PDT
Dave Hyatt
Comment 2 2014-04-23 15:19:51 PDT
Fix landed in r167727.
Note You need to log in before you can comment on or make changes to this bug.